# yfinance-mcp-server

./: .gitignore  README.md  opencode.json
.devcontainer/: Dockerfile
.github/workflows/: release.yml
.opencode/: opencode.json
.opencode/skills/stock-analysis/: SKILL.md
.opencode/skills/supply-chain-ticker-mapper/: SKILL.md
yfinance-mcp/: Cargo.toml  Dockerfile  run-http.cmd  run-http.ps1
yfinance-mcp/src/: format.rs  main.rs  server.rs
